--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,20 @@
-errbit:
-  image: errbit/errbit:latest
-  ports:
-    - "8080:8080"
-  links:
-    - mongo
-  environment:
-    - PORT=8080
-    - RACK_ENV=production
-    - MONGO_URL=mongodb://mongo:27017/errbit
-mongo:
-  image: mongo:3.4
-  ports:
-    - "27017"
+version: '3.5'
+services:
+
+  errbit:
+    # image: errbit/errbit:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    links:
+      - mongo
+    environment:
+      - PORT=8080
+      - RACK_ENV=production
+      - MONGO_URL=mongodb://mongo:27017/errbit
+  mongo:
+    image: mongo:3.4
+    ports:
+      - "27017"
